--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,10 @@
-body { background-color: #000; }
+html,
+body {
+  background-color: #000;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 #moon {
   position: fixed;
