--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,11 @@
+* {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+       -o-user-select: none;
+          user-select: none; 
+}
+
 html,
 body {
   background-color: #000;
